--- a/CSS/global.css
+++ b/CSS/global.css
@@ -2,6 +2,8 @@ body {
   margin: 0;
   font-family: "Fira Sans", "Arial", sans-serif;
   color: #141414;
+
+  margin-bottom: 1000px;
 }
 
 h1,
@@ -20,4 +22,7 @@ ul {
 img {
   max-width: 100%;
   display: block;
+}
+
+.subtitulo {
 }
