--- a/CSS/introducao.css
+++ b/CSS/introducao.css
@@ -1,10 +1,4 @@
 .introducao {
-  max-width: 1200px;
-  padding: 40px 20px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  gap: 100px;
   align-items: center;
 }
 
@@ -35,6 +29,10 @@
 @media (max-width: 1000px) {
   .introducao h1 {
     font-size: 3rem;
+  }
+
+  .introducao h1::before {
+    top: -20px;
   }
 }
 
