--- a/CSS/global.css
+++ b/CSS/global.css
@@ -45,6 +45,6 @@ img {
   .subtitulo {
     font-size: 3rem;
     text-transform: capitalize;
-    max-width: initial;
+    max-width: initial !important;
   }
 }
