--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -18,11 +18,19 @@
   color: #cccccc;
 }
 
+.footer-contato {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 300px;
+}
+
 .footer-contato li {
   font-weight: bold;
   font-size: 2.25rem;
   color: #ffffff;
   margin-bottom: 30px;
+  margin-right: 30px;
 }
 
 .footer-contato li a {
