--- a/CSS/experiencia.css
+++ b/CSS/experiencia.css
@@ -64,6 +64,15 @@
   color: #525252;
   line-height: 1.4;
   font-size: 0.875rem;
+
+  min-width: 100%;
+  margin-bottom: 0.2rem;
+}
+
+.cargo-infos {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
 .empresa-texto {
