--- a/CSS/projetos.css
+++ b/CSS/projetos.css
@@ -30,7 +30,7 @@
   color: #ffffff;
 }
 
-.mais-projetos {
+/* .mais-projetos {
   margin-top: 60px;
   font-size: 1.5rem;
   color: white;
@@ -44,7 +44,7 @@
 
 .mais-projetos a:hover {
   color: #8f8f8f;
-}
+} */
 
 @media (max-width: 800px) {
   .projetos-container {
@@ -65,104 +65,11 @@
 
 /* accordion */
 
-.nav a,
-.nav label {
-  display: block;
-  padding: 0.85rem;
-  color: #fff;
-  background-color: #151515;
-  box-shadow: inset 0 -1px #1d1d1d;
-  -webkit-transition: all 0.25s ease-in;
-  transition: all 0.25s ease-in;
-}
-
-.nav label,
-label,
-summary {
-  margin-top: 0.875rem;
-  border-radius: 5px;
-}
-
-.nav a:focus,
-.nav a:hover,
-.nav label:focus,
-.nav label:hover {
-  color: rgba(255, 255, 255, 0.5);
-  background: #030303;
-}
-
-.nav label {
-  cursor: pointer;
-}
-
-/**
- * Styling first level lists items
- */
-
-.group-list a,
-.group-list p,
-.group-list label {
-  padding: 1.125rem;
-  background: #252525;
-  box-shadow: inset 0 -1px #373737;
-}
-
-.group-list a:focus,
-.group-list a:hover,
-.group-list label:focus,
-.group-list label:hover {
-  background: #131313;
-}
-
-/**
- * Hide nested lists
- */
-
-.group-list,
-.sub-group-list,
-.sub-sub-group-list {
-  height: 100%;
-  max-height: 0;
-  overflow: hidden;
-  -webkit-transition: max-height 0.5s ease-in-out;
-  transition: max-height 0.5s ease-in-out;
-}
-
-.nav__list input[type="checkbox"]:checked + label + ul {
-  /* reset the height when checkbox is checked */
-  max-height: 1000px;
-}
-
 /* Rotating chevron icon on toggle. */
 label > span {
   float: right;
   -webkit-transition: -webkit-transform 0.65s ease;
   transition: transform 0.65s ease;
-}
-
-.nav__list input[type="checkbox"]:checked + label > span {
-  -webkit-transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  transform: rotate(90deg);
-}
-
-.nav label::before {
-  content: "";
-  display: inline-block;
-  width: 4px;
-  height: 20px;
-  position: relative;
-  top: 4px;
-  left: -18px;
-  background: linear-gradient(180deg, #ff67c3 0%, #ce1986 100%, #c1127b 100%);
-}
-
-.nav label:nth-child(2)::before {
-  background: linear-gradient(180deg, #ffef66 0%, #dbc71a 100%);
-}
-
-.nav label:nth-child(3)::before {
-  background: linear-gradient(180deg, #66c2fe 0%, #1584cd 100%);
 }
 
 /* details */
@@ -211,6 +118,7 @@ details p {
   padding: 1.125rem;
   background: #252525;
   box-shadow: inset 0 -1px #373737;
+  line-height: 1.3rem;
 }
 
 details > summary {
@@ -232,4 +140,22 @@ details[open] summary ~ * {
     opacity: 1;
     margin-left: 0px;
   }
+}
+
+.accordion:after {
+  content: "\002B";
+  color: #777;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2212";
+}
+
+.accordion span {
+  color: #777;
+  font-size: 0.875rem;
+  margin-left: 5px;
 }
