--- a/CSS/projetos.css
+++ b/CSS/projetos.css
@@ -65,15 +65,6 @@
 
 /* accordion */
 
-/* Rotating chevron icon on toggle. */
-label > span {
-  float: right;
-  -webkit-transition: -webkit-transform 0.65s ease;
-  transition: transform 0.65s ease;
-}
-
-/* details */
-
 details {
   background: #151515;
   color: #ffffff;
@@ -89,18 +80,6 @@ details {
 details > summary {
   padding: 18px;
 }
-
-details > summary::before {
-  content: "";
-  display: inline-block;
-  width: 4px;
-  height: 20px;
-  position: relative;
-  top: 4px;
-  left: -23px;
-  background: linear-gradient(180deg, #ff67c3 0%, #ce1986 100%, #c1127b 100%);
-}
-
 details[open] > summary > label > span {
   transform: rotate(90deg);
   cursor: pointer;
@@ -131,15 +110,27 @@ details[open] summary ~ * {
   animation: sweepin 0.5s ease-in-out;
 }
 
-@keyframes sweepin {
-  0% {
-    opacity: 0;
-    margin-left: -10px;
-  }
-  100% {
-    opacity: 1;
-    margin-left: 0px;
-  }
+.portfolio-item summary::before {
+  content: "";
+  width: 4px;
+  height: 20px;
+
+  display: inline-block;
+  position: relative;
+  left: -22px;
+  top: 3px;
+}
+
+.portfolio-item:nth-of-type(3n + 1) summary::before {
+  background: linear-gradient(180deg, #ff67c3 0%, #ce1986 100%, #c1127b 100%);
+}
+
+.portfolio-item:nth-of-type(3n + 2) summary::before {
+  background: linear-gradient(180deg, #ffef66 0%, #dbc71a 100%);
+}
+
+.portfolio-item:nth-of-type(3n + 3) summary::before {
+  background: linear-gradient(180deg, #66c2fe 0%, #1584cd 100%);
 }
 
 .accordion:after {
@@ -158,4 +149,15 @@ details[open] summary ~ * {
   color: #777;
   font-size: 0.875rem;
   margin-left: 5px;
+}
+
+@keyframes sweepin {
+  0% {
+    opacity: 0;
+    margin-left: -10px;
+  }
+  100% {
+    opacity: 1;
+    margin-left: 0px;
+  }
 }
