--- a/CSS/projetos.css
+++ b/CSS/projetos.css
@@ -96,7 +96,7 @@ details > summary:hover {
 details p {
   padding: 1.125rem;
   background: #252525;
-  box-shadow: inset 0 -1px #373737;
+  /* box-shadow: inset 0 -1px #373737; */
   line-height: 1.3rem;
 }
 
@@ -160,4 +160,26 @@ details[open] summary ~ * {
     opacity: 1;
     margin-left: 0px;
   }
+}
+
+.portfolio-item-link {
+  box-shadow: inset 0 -1px #373737;
+}
+
+.portfolio-item-link span {
+  margin-left: 8px;
+}
+
+.portfolio-item-link a {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.portfolio-item-link a:hover {
+  color: #7a7a7a;
 }
