--- a/CSS/introducao.css
+++ b/CSS/introducao.css
@@ -24,6 +24,9 @@
 .introducao p {
   font-size: 1.5rem;
   color: #525252;
+
+  max-width: 40ch;
+  line-height: 1.33;
 }
 
 @media (max-width: 1000px) {
@@ -40,6 +43,10 @@
   .introducao {
     grid-template-columns: 1fr 1fr;
     gap: 40;
+  }
+
+  .introducao p {
+    font-size: 1.25rem;
   }
 
   .introducao h1 {
