--- a/CSS/experiencia.css
+++ b/CSS/experiencia.css
@@ -16,7 +16,7 @@
 
 .empresa {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  /* grid-template-columns: 1fr 1fr; */
   gap: 10px 20px;
   padding: 20px;
   background-color: #f5f5f5;
@@ -63,7 +63,7 @@
 .empresa-cargo {
   color: #525252;
   line-height: 1.4;
-  font-size: 0.875rem;
+  font-size: 1rem;
 
   min-width: 100%;
   margin-bottom: 0.2rem;
@@ -121,6 +121,7 @@
   }
 
   .empresa-ano {
+    margin-top: 0.875rem;
     position: initial;
     order: 1;
     width: initial;
